--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -12,8 +12,7 @@
         padding: 15px;
         gap: 20px;
         .restaurant {
-            width: 100%;
-            max-width: 490px;
+            width: 98%;
             border-radius: 15px;
             background-color: white;
             position: relative;
