--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -16,10 +16,6 @@
     transition: all 2s ease;
   }
 
-  &:active .fa-solid {
-    opacity: 1;
-  }
-
   &:hover .fa-solid {
     opacity: 1;
   }
